# aosc-archive

./: LICENSE  OSPP_Project.md  OSPP_Project_zh_CN.md  Production.md  README.md
Asset/: Logo.xcf
Disc/: disc-1.md5  disc-1.tree  disc-10.md5  disc-10.tree  disc-11.md5  disc-11.tree  disc-12.md5  disc-12.tree  disc-13.md5  disc-13.tree  disc-14.md5  disc-14.tree  disc-15.md5  disc-15.tree  disc-16.md5  disc-16.tree  disc-17.md5  disc-17.tree  disc-18.md5  disc-18.tree  disc-19.md5  disc-19.tree  disc-2.md5  disc-2.tree  disc-20.md5  disc-20.tree  disc-21.md5  disc-21.tree  disc-22.md5  disc-22.tree  disc-23.md5  disc-23.tree  disc-24.md5  disc-24.tree  disc-25.md5  disc-25.tree  disc-26.md5  disc-26.tree  disc-27.md5  disc-27.tree  (+56 more)
Script/: about_file.py  file.py  file1.py  file_.py  rm_oldfile.py  sqlite.py  test.py
repo-retire-packages/: Cargo.toml  init.sql
repo-retire-packages/contrib/: do-retire
repo-retire-packages/src/: abbs.rs  cli.rs  db.rs  dbus.rs  main.rs  retire.rs
