[package]
name = "repo-retire-packages"
version = "0.1.0"
edition = "2018"


[dependencies]
# logging facilities
log = "0.4"
env_logger = "0.9"
clap = "^2"
anyhow = "^1"
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "time", "macros", "fs"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"] }
futures = "0.3"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
bytesize = "^1"
walkdir = "2"
byte-unit = "4"
dbus = "0.9"
dbus-tokio = "0.7"
